# blob-file-example

./: Cargo.toml  readme.md
src/: main.rs
